--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
         }
 
         #customModal .modal-content {
-            width: 50%;
-            max-width: 350px;
+            width: 400px;
+            max-width: 400px;
             border-radius: 12px;
             position: relative;
             margin-bottom: 0;
@@ -497,6 +497,29 @@
             font-size: 16px;
             cursor: pointer;
         }
+
+        .username-textbox {
+            padding: 8px;
+            background-color: #f5f5f5;
+            font-family: Arial, sans-serif;
+            margin-bottom: 3px;
+        }
+
+        .username-textbox p {
+            font-weight: bold;
+            color: #333;
+            margin-bottom: 10px;
+        }
+
+        .username-input {
+            background-color: #f5f5f5;
+            border: none;
+            padding: 10px 0;
+            width: 100%;
+            color: #888;
+            font-size: 16px;
+            outline: none;
+        }
     </style>
 </head>
 
@@ -511,8 +534,7 @@
         <!-- Updated profile section -->
         <div class="profile-section">
             <div class="profile-pic">
-                <img src="https://via.placeholder.com/44" alt="Profile"
-                    style="width: 100%; height: 100%; object-fit: cover;">
+                <img src="tiktok.png" alt="Profile" style="width: 100%; height: 100%; object-fit: cover;">
             </div>
             <div class="profile-info">
                 <div class="username">Aladin Official</div>
@@ -522,6 +544,10 @@
                 </div>
             </div>
             <div class="dropdown-arrow">▼</div>
+        </div>
+
+        <div class="username-textbox">
+            <input type="text" class="username-input" placeholder="Username">
         </div>
 
         <div class="recharge-label">Recharge:</div>
@@ -730,6 +756,9 @@
     </div>
 
     <script>
+
+        let currentCoins = 0;
+
         let selectedCoins = "7000";  // Default to 7000 coins selected
         let customAmount = "99999";
         const totalPrice = document.querySelector('.total-price');
@@ -834,8 +863,23 @@
             document.querySelectorAll('.modal').forEach(modal => {
                 modal.style.display = 'none';
             });
+
+            // After payment is completed, update the coins count
+            if (selectedCoins === "custom") {
+                currentCoins += parseInt(customAmount.replace(/,/g, ''));
+            } else {
+                currentCoins += parseInt(selectedCoins);
+            }
+
+            // Update the coins display in the profile section
+            document.querySelector('.coins-count').innerHTML =
+                `<img src="moneda2.png" style="width: 16px; height: 16px; margin-right: 4px;">
+        ${formatNumber(currentCoins)}`;
         }
 
+        function formatNumber(num) {
+            return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+        }
         function addDigit(digit) {
             if (customAmount === "99999") {
                 customAmount = "";
