--- a/index.html
+++ b/index.html
@@ -543,9 +543,26 @@
             border: none;
             padding: 10px 0;
             width: 100%;
-            color: #888;
+            color: #0c0303;
             font-size: 16px;
             outline: none;
+        }
+
+        #customAmount {
+            background-color: #f5f5f5;
+            border: none;
+            padding: 10px 0;
+            color: #0c0303;
+            font-size: 16px;
+            outline: none;
+            display: inline-block;
+        }
+
+        .custom-coin-input {
+            display: flex;
+            align-items: center;
+            gap: 5px;
+            background-color: #f5f5f5;
         }
     </style>
 </head>
