--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
             <div class="order-summary">
                 <div class="summary-row">
                     <div class="summary-label">Account</div>
-                    <div id="orderUsername">shiyam_kalwar</div>
+                    <div id="orderUsername"></div>
                 </div>
 
                 <div class="summary-row" id="orderCoinsRow">
